// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Basic Table 1`] = `
<div
  className="sc-ezWOiH kQmwHd"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO ddqNNK"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO hijiIt dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jzXBki dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Empty Data Table 1`] = `
<div
  className="sc-ezWOiH hrokTS"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO ddqNNK"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-jIZahH cdqNpc"
          colSpan={5}
        >
          <p
            className="sc-fnykZs jhxngp c-text--body-5"
          >
            There is no data loaded.
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Expandable table 1`] = `
<div
  className="sc-ezWOiH kQmwHd"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO ddqNNK"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO hijiIt dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jzXBki dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO ecHkwA dDMa-dg"
          width={100}
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Action
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <button
            appearance="primary"
            className="sc-dkzDqf sc-hKMtZM dsAMhH jyzXNF"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Title As Component 1`] = `
<div
  className="sc-ezWOiH kQmwHd"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO ddqNNK"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      <tr>
        <td
          className="sc-bZnhIo kpuJSw"
          colSpan={5}
        >
          <div>
            Your deposit
          </div>
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH sc-himrzO hijiIt eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jzXBki eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Title As Plain Text 1`] = `
<div
  className="sc-ezWOiH kQmwHd"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO ddqNNK"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      <tr>
        <td
          className="sc-jdAMXn etFNKQ"
          colSpan={5}
        >
          Assets to deposit
        </td>
      </tr>
      <tr>
        <td
          className="sc-jIZahH sc-himrzO hijiIt eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jzXBki eifDIB"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table With Footer 1`] = `
<div
  className="sc-ezWOiH kQmwHd"
  data-element="tableWrapper"
>
  <table
    className="sc-bZkfAO ddqNNK"
    data-element="table"
  >
    <thead
      className="sc-ciZhAO dpuqFH"
    >
      
      
      <tr>
        <td
          className="sc-jIZahH sc-himrzO hijiIt dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO gfrNml dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-jIZahH sc-himrzO jzXBki dDMa-dg"
        >
          <div
            className="sc-kLLXSd sc-ikZpkk hnWIYw hqKFhs"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-jIZahH fnGgSc"
        >
          <div
            className="sc-kgUAyh dDFYwe"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-jIZahH fRaiTE"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-jIZahH cqqSND"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      className="sc-iTONeN gtuFum c-table__footer"
    >
      <td
        className="sc-jIZahH gfrNml"
        colSpan={5}
      >
        <div>
          Footer component
        </div>
      </td>
    </tfoot>
  </table>
</div>
`;
